# AKSprayPaint

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/commands/: mod.rs  run.rs  set.rs  watch.rs
src/utils/: cache.rs  daemon.rs  mod.rs  recolor.rs  theme.rs  wallpaper.rs
